# capuchin

./: .svnignore  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  capuchin-sharp.pc.in  capuchin.doap  capuchin.in  capuchin.mds  configure.ac  mukkumukku.in  new-stuff-manager.in  new-stuff-manager.mds  nsm-sharp.pc.in
data/: Makefile.am  org.gnome.NewStuffManager.service.in  org.gnome.capuchin.service.in
dbus-sharp/: Makefile.am  dbus-sharp.mdp  dbus-sharp.mds
doc/: api.txt  repository.rng  tutorial.txt
examples/: DBusTester.py  DownloadManager.py  Makefile.am  testapp.cs  testapp.py
specs/: Makefile.am  deskbarapplet.conf
src/: Makefile.am
src/capuchin/: AssemblyInfo.cs.in  Main.cs  Makefile.am  capuchin.mdp
src/libcapuchin/: AppObject.cs  AppObjectManager.cs  AssemblyInfo.cs.in  Capuchin.cs  ConfParser.cs  Download.cs  DownloadManager.cs  Globals.cs.in  IAppObject.cs  IAppObjectManager.cs  IDownloadManager.cs  Makefile.am  NoSuchPluginException.cs  Repository.cs  RepositoryConnectionException.cs  RepositoryNotInitializedException.cs  libcapuchin.mdp
src/libcapuchin/Compression/: Decompresser.cs  IExtracter.cs  TarBz2Extracter.cs  TarExtracter.cs  TarGzExtracter.cs  ZipExtracter.cs
src/libcapuchin/Downloaders/: AbstractDownloader.cs  FtpDownloader.cs  HttpDownloader.cs
src/libcapuchin/Installation/: IInstaller.cs
src/libcapuchin/Installation/Compression/: Decompresser.cs  IExtracter.cs  TarBz2Extracter.cs  TarExtracter.cs  TarGzExtracter.cs  ZipExtracter.cs
src/libcapuchin/Installation/Simple/: SimpleInstaller.cs
src/libcapuchin/Logging/: DelayedTextWriter.cs  FileSystem.cs  Log.cs  TeeTextWriter.cs
src/libcapuchin/Verification/: ChecksumVerifier.cs  GnuPGVerifier.cs  IVerifier.cs
src/libcapuchin/Xml/: ItemsDict.cs  Repository.cs  author.cs  changelog.cs  checksum.cs  item.cs
src/libmukkumukku/: Makefile.am  NewStuff.cs  Repository.cs  libnsm.mdp
src/libmukkumukku/Compression/: Decompresser.cs  IExtracter.cs  TarBz2Extracter.cs
src/libmukkumukku/Verification/: GnuPGVerifier.cs  IVerifier.cs
src/libnsm/: AssemblyInfo.cs.in  ConfParser.cs  Download.cs  DownloadClient.cs  DownloadItem.cs  DownloadManager.cs  Downloader.cs  DownloadsList.cs  Globals.cs.in  Makefile.am  NewStuff.cs  NewStuffManager.cs  libnsm.mdp
src/libnsm/Compression/: Decompresser.cs  TarExtracter.cs  TarGzExtracter.cs  ZipExtracter.cs
src/libnsm/Downloaders/: AbstractDownloader.cs  FtpDownloader.cs  HttpDownloader.cs  IDownloader.cs
src/libnsm/Verification/: ChecksumVerifier.cs
src/mukkumukku/: Makefile.am  nsm.mdp
src/nsm/: AssemblyInfo.cs.in  Main.cs  Makefile.am  nsm.mdp
tests/: UnitTester.py
